# embbedings

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/core/: config.py
app/services/: factory.py
app/vendors/: factory.py
stream/: main.py  openai_utils.py  pinecone_utils.py
tmp/: commands.txt  curl.txt  page.py  use.py
tmp/gemini/: chat.py  chat_rhyme.py  code.py  code_start.py  commit_embeddings.py  commit_local.py  commit_query.py  commit_test.py  helpers.py  instructions.py  result.txt  test.py  test_f.py  tokenizer.py  translate.py  translate_class.py
tmp/gemini/chain/: batch.py  multimodal.py  sentences.txt  settings.txt  start-settings.py  start.py  stream.py
tmp/gemini/pinecone/: embedding.py  register-embedding-pinecone.py  registers-pinecone.py  (+2 more)
tmp/gemini/streamlit/: app.py  poemy.py  pyproject.toml  snake.py
tmp/image/: Dockerfile  docker-compose.yaml
tmp/open/: battle.py  rap01.txt  rap02.txt
tmp/pandas/: EmpresasFormatCSV - Faturamento.csv  EmpresasFormatCSV-Cohapar.csv  EmpresasFormatCSV-Coroados.csv  dados_filtrados_e_formatados_limpos_final.csv  dados_filtrados_e_formatados_limpos_final_faturamento.csv  dados_filtrados_e_formatados_limpos_v2.csv  dados_filtrados_e_formatados_v2.csv  format.py  start.py
tmp/pinecone/: pinerag.py
tmp/scripts/: calculate_bytes.py  correct_text.py  sentiment-analysis.py  sql_budecosystem.py  text-llama.py  text_generation.py  translate_cmd.py  translate_pt_en.py  translate_t5-base.py  vanna_chi.py  vanna_start.py
tmp/vertexapi/: check_key.py  start.py
(+13 files in other folders)
